# istoria-backend

./: .gitignore  Chat_AI.py  Speech_To_Text.py  Story_Teller.py  Summary_AI.py  Text_To_Speech.py  db.py  file_service.py  main.py  models.py  pyproject.toml  requirements.txt  summary_service.py
core/: Chat_AI.py  Summary_AI.py  file_service.py
