[project]
name = "moonshot48-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx[socks]>=0.28.1",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "sqlmodel>=0.0.24",
]
