[project]
name = "moonshot48-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "httpx[socks]>=0.28.1",
    "openai>=1.30.0",
    "psycopg[binary]>=3.2.6",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.20",
    "sqlmodel>=0.0.24",
    "websocket>=0.2.1",
    "websocket-client>=1.8.0",
]
